--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		- CABLE TV<br/>
 		- IF YOU HAVE ANY OTHER NEEDS LET US KNOW AND WE'LL DO OUR BEST TO FACILITATE YOU<br/>
 	</div>
-	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3S1GN</footer>
+	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3SI8N</footer>
 </div>
 </body>
 </html>
