--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 		<h1>MAP</h1>
 		<img src="img/Sherkin_map_2017.png">
 	</div>
-	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3S1GN</footer>
+	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3S18N</footer>
 	
 	<!--<script type="text/javascript">
 		$.get("http://api.openweathermap.org/data/2.5/weather?q=Baltimore,IE&APPID=b50cc59a7bf4015a417b8e8641cdf84f&callback=cat" , function(data){
