--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 			<button type="submit">SUBMIT</button>
 		</fieldset>
 	</form>
-	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3S1GN</footer>
+	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3SI8N</footer>
 	</div>
 </body>
 </html>
