--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
 		<h2>Horseshoe Harbour</h2>
 		<img src="img/Horseshoe-Harbour-Sherkin-Island-hi-res-300x150.jpg">
 	</div>
-	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3S1GN</footer>
+	<footer>Silver Strand Guesthouse, Sherkin Island, Co. Cork. Designed by FMD3SI8N</footer>
 	</div>
 </body>
 </html>
